# cfdCuda

./: 1D_convection.cpp  1D_convection_CUDA.cu  2D_convection_CUDA.cu  2D_convection_CUDA_loop.cu  CMakeLists.txt  MAIN.cu  README.md  a.exp  a.lib
source/: matrixCopy.cu  matrixCopy.cuh
source/finiteDiff/: finiteDiff1Dparallel.cu  finiteDiff1Dparallel.cuh  finiteDiff1Dserial.cpp  finiteDiff1Dserial.hpp  finiteDiff2Dparallel.cu  finiteDiff2Dparallel.cuh
source/initConds/: stepFunction1Dparallel.cu  stepFunction1Dparallel.cuh  stepFunction2Dparallel.cu  stepFunction2Dparallel.cuh
source/run/: runConvection1Dparallel.cu  runConvection1Dparallel.cuh  runConvection1Dserial.cpp  runConvection1Dserial.hpp  runConvection2Dparallel.cu  runConvection2Dparallel.cuh
